<?xml version="1.0" encoding="utf-8"?>

<!--

strings.xml in FtcRobotController

Copyright (c) 2014, 2015 Qualcomm Technologies Inc

All rights reserved.

Redistribution and use in source and binary forms, with or without modification,
are permitted (subject to the limitations in the disclaimer below) provided that
the following conditions are met:

Redistributions of source code must retain the above copyright notice, this list
of conditions and the following disclaimer.

Redistributions in binary form must reproduce the above copyright notice, this
list of conditions and the following disclaimer in the documentation and/or
other materials provided with the distribution.

Neither the name of Qualcomm Technologies Inc nor the names of its contributors
may be used to endorse or promote products derived from this software without
specific prior written permission.

NO EXPRESS OR IMPLIED LICENSES TO ANY PARTY'S PATENT RIGHTS ARE GRANTED BY THIS
LICENSE. THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
"AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE
FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-->

<resources>

  <string name="app_name">FTC Robot Controller</string>

  <!-- Menu -->
  <string name="inspection_mode_menu_item">Self Inspect</string>
  <string name="programming_mode_menu_item">Programming Mode</string>
  <string name="blocks_menu_item">Blocks</string>
  <string name="settings_menu_item">Settings</string>
  <string name="restart_robot_menu_item">Restart Robot</string>
  <string name="configure_robot_menu_item">Configure Robot</string>
  <string name="about_menu_item">About</string>
  <string name="allycolor_menu_item">Change Alliance Color</string>
  <string name="beaconyn_menu_item">Get Beacons</string>
  <string name="shootnum_menu_item"># of Balls to Shoot</string>
  <string name="tile_menu_item">Start Tile</string>
  <string name="capball_menu_item">Hit Cap Ball</string>
  <string name="switches">Digital Switch</string>
  <string name="exit_menu_item">Exit</string>

  <string name="red">Alliance color is now: Red</string>
  <string name="blue">Alliance color is now: Blue</string>
  <string name="beaconN">Robot will now: Skip beacons and park</string>
  <string name="beaconY">Robot will now: Go for both beacons</string>
  <string name="beaconyes">Do Beacons</string>
  <string name="beaconno">Skip Beacons</string>
  <!-- Preferences -->
  <string name="pref_view_logs">View Logs</string>
  <string name="pref_sound_on_off_title">Sound</string>

  <!-- Toast messages -->
  <string name="toastWifiConfigurationComplete">Configuration Complete</string>
  <string name="toastRestartingRobot">Restarting Robot</string>
  <string name="toastConfigureRobotBeforeProgrammingMode">You must Configure Robot before starting Programming Mode.</string>

  <string name="switchHead">Switches</string>
  <string name="switchBack">BACK</string>
  <string name="redName">Red</string>
  <string name="blueName">Blue</string>
  <string name="name1ball">1</string>
  <string name="name2ball">2</string>
  <string name="cornerName">Corner Tile</string>
  <string name="vortexName">Vortex Tile</string>
</resources>
